# polystrip

./: .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  run  rust-toolchain.toml
examples/: basic_rendergraph.rs
examples/fractal_clock/: clock.wgsl  fractal.wgsl  indices.wgsl  main.rs  vertices.wgsl
examples/geometry/: main.rs
examples/instances/: main.rs
examples/primitives/: main.rs
examples/shapes/: main.rs
examples/slime/: agents.wgsl  canvas.wgsl  main.rs  vertex.wgsl
examples/text/: main.rs
examples/textures/: main.rs
examples/transform/: main.rs
src/: backend.rs  data.rs  geometry.rs  gon.rs  graph.rs  lib.rs  math.rs  pipeline.rs  pixel.rs  renderer.rs  texture.rs  vertex.rs
src/gon/: coloured.vert  textured.frag  textured.vert
src/renderer/: backend.rs  mod.rs  texture.rs
src/spirv/: README.md  coloured.frag  coloured.frag.spv  coloured.vert  coloured.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  textured.frag  textured.frag.spv  textured.vert  textured.vert.spv
src/tui/: character.frag  character.vert
