[package]
name = "polystrip"
description = "A 2D accelerated graphics rendering library"
keywords = ["gamedev", "graphics", "rendering"]
categories = ["game-development", "graphics", "rendering::engine"]
version = "0.7.0"
authors = ["TheOnlyMrCat <skylifegame@gmail.com>"]
repository = "https://github.com/TheOnlyMrCat/polystrip"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["gon"]
gon = []
tui = []

[dependencies]
wgpu = { version = "0.13.1", features = ["naga"] }
wgpu-types = "0.13.0"
naga = "0.9.0"
raw-window-handle = "0.4.3"

serde = { version = "1.0.138", features = ["derive"], optional = true }
fxhash = "0.2.1"

[dev-dependencies]
winit = "0.27.2"
pollster = "0.2.5"
time = { version = "0.3.7", features = ["local-offset"] }
bytemuck = { version = "1.10.0", features = ["derive"] }
libc = "0.2.126"
