[package]
name = "polystrip"
description = "A powerful, flexible wrapper around wgpu"
keywords = ["gamedev", "graphics", "rendering"]
categories = ["game-development", "graphics", "rendering::engine"]
version = "0.7.0"
authors = ["TheOnlyMrCat <skylifegame@gmail.com>"]
repository = "https://github.com/TheOnlyMrCat/polystrip"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
wgpu = { version = "0.14.0", features = ["naga"] }
wgpu-types = "0.14.0"
naga = "0.10.0"
raw-window-handle = "0.5.0"
fxhash = "0.2.1"

[dev-dependencies]
winit = "0.27.3"
pollster = "0.2.5"
time = { version = "0.3.15", features = ["local-offset"] }
bytemuck = { version = "1.12.1", features = ["derive"] }
libc = "0.2.134"
rand = "0.8.5"
